--- a/app/src/main/res/layout/fragment_skyscraper.xml
+++ b/app/src/main/res/layout/fragment_skyscraper.xml
@@ -6,5 +6,52 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
+
+        <include
+            layout="@layout/app_bar_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/AddPostButton"
+            style="@style/pinkButtonStyle"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="25dp"
+            android:clickable="true"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:maxImageSize="45dp"
+            app:srcCompat="@android:drawable/ic_input_add" />
+
+        <LinearLayout
+            android:id="@+id/lijst"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#C2EBFF"
+            android:gravity="bottom"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/bovenkantSkyscraper"
+                android:layout_width="match_parent"
+                android:layout_height="179dp"
+                app:srcCompat="@drawable/bovenkant_skyscraper" />
+
+            <ImageView
+                android:id="@+id/onderkantSkyscraper"
+                android:layout_width="match_parent"
+                android:layout_height="119dp"
+                app:srcCompat="@drawable/onderkant_skyscraper" />
+
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
