loginscherm is nu onze eerste scherm + waarde in de velden

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,9 +28,12 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtemail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:text="dora.theexplorer1999@gmail.com"/>
+
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -48,11 +51,13 @@
                     app:layout_constraintTop_toBottomOf="@+id/login_field">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtwachtwoord"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
                         android:password="false"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:text="ZwieberNee!NietStelen"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
