--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/backendFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/bulletinBoardFragment"
@@ -29,8 +29,9 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.faithandroid.login.LoginFragment"
-        android:label="LoginFragment" >
-
+        android:label="LoginFragment"
+        tools:layout="@layout/fragment_login"
+        >
         <action
 
             android:id="@+id/action_loginFragment_to_homeFragment"
