--- a/app/src/main/res/layout/fragment_billboard.xml
+++ b/app/src/main/res/layout/fragment_billboard.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewmodelBillboard"
+            type="com.example.faithandroid.viewmodels.BillboardViewModel" />
+    </data>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,17 +35,26 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="?attr/actionBarSize">
 
-
-
-                <ListView
+                <!--<ListView
                     android:id="@+id/list_view"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent" />-->
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/billboardGridView"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:padding="6dp"
+                    android:clipToPadding="false"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
 
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:BillboardListData="@{viewmodelBillboard.properties}"/>
 
             </ScrollView>
         </LinearLayout>
-
     </FrameLayout>
 </layout>
