Proberen detail view aan te maken: gefaald

--- a/app/src/main/res/layout/fragment_goaldetails.xml
+++ b/app/src/main/res/layout/fragment_goaldetails.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="goalDetailViewModel"
+            type="com.example.faithandroid.viewmodels.GoalDetailsViewModel" />
+    </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -64,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginBottom="20dp"
-            android:text="TextView"
+            android:text="test"
             app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintStart_toStartOf="parent" />
 
