--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -131,7 +131,7 @@
     </fragment>
     <fragment
         android:id="@+id/goalDetailsFragment"
-        android:name="com.example.faithandroid.goalDetailsFragment"
+        android:name="com.example.faithandroid.GoalDetailsFragment"
         android:label="goalDetailsFragment" />
 
 </navigation>
