--- a/app/src/main/res/layout/fragment_skyscraper.xml
+++ b/app/src/main/res/layout/fragment_skyscraper.xml
@@ -2,12 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:background="#c2ebff">
 
         <include
+            android:id="@+id/include3"
             layout="@layout/app_bar_back"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -31,7 +33,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
                 android:id="@+id/lijst"
@@ -45,6 +48,7 @@
                     android:id="@+id/bovenkantSkyscraper"
                     android:layout_width="match_parent"
                     android:layout_height="179dp"
+                    android:background="#c2ebff"
                     app:srcCompat="@drawable/bovenkant_skyscraper" />
 
                 <ImageView
