--- a/app/src/main/res/layout/fragment_billboard.xml
+++ b/app/src/main/res/layout/fragment_billboard.xml
@@ -19,42 +19,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="?attr/actionBarSize">
 
-        <LinearLayout
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/billboardGridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top"
-            android:orientation="vertical"
-            android:id="@+id/billboardLayout"
-            >
+            android:clipToPadding="false"
+            android:padding="6dp"
+            app:BillboardListData="@{viewmodelBillboard.mockData}"
 
-
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="?attr/actionBarSize">
-
-                <!--<ListView
-                    android:id="@+id/list_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />-->
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/billboardGridView"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:padding="6dp"
-                    android:clipToPadding="false"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:BillboardListData="@{viewmodelBillboard.properties}"/>
-
-            </ScrollView>
-        </LinearLayout>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        </FrameLayout>
     </FrameLayout>
 </layout>
