--- a/app/src/main/res/layout/fragment_bulletinboard.xml
+++ b/app/src/main/res/layout/fragment_bulletinboard.xml
@@ -3,21 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.faithandroid.viewmodels.BulletinBoardViewModel" />
+    </data>
+
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!--<include
-            layout="@layout/app_bar_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" /> -->
-
         <include
             layout="@layout/app_bar_back"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/AddPostButton"
@@ -35,19 +37,11 @@
             app:maxImageSize="45dp"
             app:srcCompat="@android:drawable/ic_input_add" />
 
-        <ScrollView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="?attr/actionBarSize">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top"
-                android:orientation="vertical"
-                android:id="@+id/bulletinLayout">
-
-                <Button
+            <Button
                     android:id="@+id/requestConsultationButton"
                     style="@style/pinkButtonStyle"
                     android:layout_width="match_parent"
@@ -57,8 +51,8 @@
                     android:layout_marginRight="10dp"
                     android:text="@string/request_consultation" />
 
-            </LinearLayout>
 
-        </ScrollView>
+
+        </FrameLayout>
     </FrameLayout>
 </layout>
