--- a/app/src/main/res/layout/fragment_text_post_toevoegen.xml
+++ b/app/src/main/res/layout/fragment_text_post_toevoegen.xml
@@ -5,7 +5,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".text_post_toevoegen">
+        tools:context=".TextPostToevoegenFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
