--- a/app/src/main/res/layout/skyscraper_goaldetails.xml
+++ b/app/src/main/res/layout/skyscraper_goaldetails.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="goalDetailViewModel"
-            type="com.example.faithandroid.viewmodels.GoalDetailsViewModel" />
+            type="com.example.faithandroid.skyscraper.SkyscraperViewModel" />
     </data>
 
 
