--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -12,7 +12,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:headerLayout="@layout/nav_header_main"
+            app:headerLayout="@layout/app_nav_header_main"
             app:menu="@menu/activity_main_drawer" />
 
         <fragment
