--- a/app/src/main/res/layout/bulletinboard_options_add_post.xml
+++ b/app/src/main/res/layout/bulletinboard_options_add_post.xml
@@ -60,20 +60,20 @@
                             android:gravity="center">
 
                             <Button
-                                android:id="@+id/button2"
+                                android:id="@+id/AudioButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="5dp"
-                                android:clickable="false"
+                                android:enabled="true"
                                 android:text="@string/audio" />
 
                             <Button
-                                android:id="@+id/button3"
+                                android:id="@+id/FotoButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:clickable="false"
+                                android:enabled="false"
                                 android:text="@string/Image" />
 
 
@@ -85,20 +85,21 @@
                             android:gravity="center">
 
                             <Button
-                                android:id="@+id/button4"
+                                android:id="@+id/VideoButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="5dp"
-                                android:clickable="false"
+                                android:enabled="false"
                                 android:text="@string/video" />
 
                             <Button
-                                android:id="@+id/button5"
+                                android:id="@+id/TekstButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/text" />
+                                android:text="@string/text"
+                                android:clickable="true" />
 
 
                         </TableRow>
@@ -126,18 +127,20 @@
                             android:gravity="center">
 
                             <Button
-                                android:id="@+id/button7"
+                                android:id="@+id/wolkenkrabberButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="5dp"
+                                android:enabled="false"
                                 android:text="@string/skyscraper" />
 
                             <Button
-                                android:id="@+id/button6"
+                                android:id="@+id/cinemaButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:enabled="false"
                                 android:text="@string/cinema" />
 
 
@@ -149,18 +152,20 @@
                             android:gravity="center">
 
                             <Button
-                                android:id="@+id/button8"
+                                android:id="@+id/schatkistButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="5dp"
+                                android:enabled="false"
                                 android:text="@string/treasure_chest" />
 
                             <Button
-                                android:id="@+id/button9"
+                                android:id="@+id/rugzakButton"
                                 style="@style/buttonStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:enabled="false"
                                 android:text="@string/backpack" />
 
 
