--- a/app/src/main/res/layout/bulletinboard_textpost.xml
+++ b/app/src/main/res/layout/bulletinboard_textpost.xml
@@ -5,7 +5,11 @@
         <variable
             name="post"
             type="com.example.faithandroid.models.Post" />
+        <variable
+            name="date"
+            type="org.threeten.bp.LocalDate" />
     </data>
+
     
     <LinearLayout
         android:layout_width="wrap_content"
@@ -42,7 +46,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="0"
-                        android:text="@{post.title}"
+                        android:text="@{post.title + date.toString()}"
                         android:textColor="@android:color/black"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -53,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:layout_weight="1"
-                        android:text='@{post.data.substring(0, 30) + "..."}'
+                        android:text='@{post.data.length() >= 49? post.data.substring(0, 50) + "...": post.data}'
 
 
                         android:textColor="@android:color/black" />
