--- a/app/src/main/res/layout/billboard_goal.xml
+++ b/app/src/main/res/layout/billboard_goal.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -15,55 +16,73 @@
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
                 <TextView
                     android:id="@+id/description"
-                    android:layout_width="295dp"
-                    android:layout_height="49dp"
+                    android:layout_width="275dp"
+                    android:layout_height="0dp"
                     android:layout_margin="10dp"
+                    android:layout_marginStart="282dp"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:text="@{property.description}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/profilepic" />
+                    app:layout_constraintStart_toEndOf="@+id/profilepicture"
+                    app:layout_constraintTop_toBottomOf="@+id/button" />
+
 
                 <Button
                     android:id="@+id/button"
                     android:layout_width="72dp"
                     android:layout_height="37dp"
-                    android:layout_margin="10dp"
                     android:text="X"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/profilepic"
-                    android:layout_width="108dp"
-                    android:layout_height="88dp"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
-
                 <TextView
                     android:id="@+id/titleGoal"
-                    android:layout_width="218dp"
-                    android:layout_height="37dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:layout_marginStart="10dp"
                     android:text="@{property.title}"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    app:flow_horizontalAlign="center"
                     app:layout_constraintBottom_toTopOf="@+id/description"
                     app:layout_constraintEnd_toStartOf="@+id/button"
-                    app:layout_constraintStart_toEndOf="@+id/profilepic"
+                    app:layout_constraintStart_toEndOf="@+id/profilepicture"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/profilepicture"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:contentDescription="@string/profiel"
+                    android:src="@drawable/profielfoto"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <TableRow
+                android:id="@+id/hr1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444"></TableRow>
         </androidx.cardview.widget.CardView>
 
     </FrameLayout>
