--- a/app/src/main/res/layout/bulletinboard.xml
+++ b/app/src/main/res/layout/bulletinboard.xml
@@ -44,12 +44,12 @@
 
             <Button
                 android:id="@+id/requestConsultationButton"
-                style="@style/pinkButtonStyle"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:text="@string/request_consultation"
+                android:textColor="#FFFFFF"
+                app:backgroundTint="#F8A59E"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
