--- a/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
+++ b/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
@@ -7,15 +7,30 @@
         android:layout_height="match_parent"
         tools:context=".TextPostToevoegenFragment">
 
+        <include
+            layout="@layout/app_bar_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="?attr/actionBarSize" >
 
+
+            <TextView
+                android:layout_width="388dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/nieuwe_tekst_post_toevoegen"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:gravity="center"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_margin="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textposttitel"
@@ -33,8 +48,11 @@
                     android:id="@+id/textposttext"
                     android:layout_width="match_parent"
                     android:layout_height="174dp"
-                    android:layout_marginTop="10dp"
-                    android:hint="@string/tekst" />
+                    android:layout_margin="10dp"
+                    android:hint="@string/tekst"
+                    android:gravity="top|left"
+                    android:lines="7"
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,7 +60,8 @@
                 android:id="@+id/text_post_toevoegen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_margin="10dp"
+                android:text="@string/toevoegen" />
         </LinearLayout>
     </FrameLayout>
 
